--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,11 @@
    - "2.11.7"
  jdk:
    - oraclejdk8
+
+ notifications:
+   webhooks:
+     urls:
+       - https://webhooks.gitter.im/e/453d7b06a403af615f4c 
+     on_success: change  # options: [always|never|change] default: always
+     on_failure: always  # options: [always|never|change] default: always
+     on_start: never     # options: [always|never|change] default: always
