--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@
    - "2.11.7"
  jdk:
    - oraclejdk8
-
+ script:
+   - sbt clean coverage test &&
+     sbt coverageAggregate
+ after_success:
+   - sbt coveralls
  notifications:
    webhooks:
      urls:
