--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@
  jdk:
    - oraclejdk8
  script:
-   - sbt clean coverage test &&
+   - sbt clean coverage test coverageReport &&
      sbt coverageAggregate
  after_success:
    - sbt coveralls
