Fix Travis build (missing PGP plugin)
* missing pgp plugin

* Add workaround for https://github.com/travis-ci/travis-ci/issues/7703

* Add Richard Searle in the contributors list

* Fix indentation typo in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@
    - "2.11.7"
  jdk:
    - oraclejdk8
+ before_script:
+  - sudo chmod +x /usr/local/bin/sbt
  script:
    - sbt clean coverage test coverageReport &&
      sbt coverageAggregate
