--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,18 @@
- language: scala
- scala:
-   - "2.13.0"
-   - "2.12.10"
-   - "2.11.12"
- jdk:
-   - openjdk11
- before_script:
-  - sudo chmod +x /usr/local/bin/sbt
- script:
-   - sbt clean coverage test coverageReport &&
-     sbt coverageAggregate
- after_success:
-   - sbt coveralls
- notifications:
-   webhooks:
-     urls:
-       - https://webhooks.gitter.im/e/453d7b06a403af615f4c 
-     on_success: change  # options: [always|never|change] default: always
-     on_failure: always  # options: [always|never|change] default: always
-     on_start: never     # options: [always|never|change] default: always
+language: scala
+jdk: openjdk11
+os: linux
+
+stages:
+  - name: test
+  - name: release
+    if: ((branch = master AND type = push) OR (tag IS present)) AND NOT fork
+
+jobs:
+  include:
+    - name: compileAndTest
+      script: sbt test
+    - stage: release
+      script: sbt ci-release
+
+before_install:
+ - git fetch --tags
