--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -2,7 +2,7 @@ name: Scala CI
 
 on:
   push:
-    branches: [ master ]
+    branches: '*'
   pull_request:
     branches: [ master ]
 
@@ -11,6 +11,21 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    steps:
+    - uses: actions/checkout@v2
+    - uses: coursier/cache-action@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Run tests
+      run: sbt +test
+
+  release:
+    needs: [compileAndTest]
+    if: 
+      ((branch = master AND type = push) OR (tag IS present)) AND NOT fork
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: coursier/cache-action@v3
