--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,7 +24,7 @@ jobs:
   release:
     needs: [compileAndTest]
     if: 
-      (github.ref == 'refs/heads/master' AND type = push) OR (tag IS present)) AND NOT fork
+      (github.ref == 'refs/heads/master' && type = push) || startsWith(github.ref, 'refs/tags/'))
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
