--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -7,10 +7,8 @@ on:
     branches: [ master ]
 
 jobs:
-  compileAndTest:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - uses: coursier/cache-action@v3
@@ -22,7 +20,7 @@ jobs:
       run: sbt +test
 
   release:
-    needs: [compileAndTest]
+    needs: [test]
     if: 
       (github.ref == 'refs/heads/master') || startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
@@ -33,5 +31,5 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Run tests
-      run: sbt +test
+    - name: Release
+      run: sbt ci-release
